add: ai_act copiato da sito

--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -1,4 +1,10 @@
 /* Navbar */
+body {
+    margin: 0;
+    /* Latex font */
+    font-family: 'Lato', sans-serif;
+}
+
 .navbar {
     position: sticky;
     top: 0;
