edit: ai_act links and structure
Simplified ai_act.html
Added links to the actual website
Added sub_pattern.py to handle the substitutions

--- a/templates/base.html
+++ b/templates/base.html
@@ -26,6 +26,57 @@
         {% block content %}{% endblock %}
     </div>
 
+    <footer class="et-l et-l--footer">
+        <div class="et_builder_inner_content et_pb_gutters3">
+            <div class="et_pb_section et_pb_section_1_tb_footer et_pb_with_background et_section_regular">
+            
+            
+            
+            
+            
+            
+            <div class="et_pb_row et_pb_row_1_tb_footer et_pb_gutters1 et_pb_row_1-4_3-4">
+            <div class="et_pb_column et_pb_column_1_4 et_pb_column_3_tb_footer  et_pb_css_mix_blend_mode_passthrough">
+            
+            
+            
+            
+            <div class="et_pb_module et_pb_image et_pb_image_0_tb_footer">
+            
+            
+            
+            
+            <a href="https://futureoflife.org/" target="_blank"><span class="et_pb_image_wrap "><img loading="lazy" decoding="async" width="158" height="132" src="https://artificialintelligenceact.eu/wp-content/uploads/2021/08/FLI-.webp" alt="" title="FLI" class="wp-image-1554"></span></a>
+        </div>
+        </div><div class="et_pb_column et_pb_column_3_4 et_pb_column_4_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
+            
+            
+            
+            
+            <div class="et_pb_module et_pb_text et_pb_text_2_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
+            
+            
+            
+            
+            <div class="et_pb_text_inner">© Future of Life Institute, 2024</div>
+        </div><div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
+            
+            
+            
+            
+            <div class="et_pb_text_inner"><p><span>This website is maintained by the Future of Life Institute (FLI). Our <a href="https://transparency-register.europa.eu/searchregister-or-update/organisation-detail_en?id=787064543128-10" target="_blank" rel="noopener">EU transparency register</a> number is&nbsp;</span>787064543128-10.</p></div>
+        </div>
+        </div>
+            
+            
+            
+            
+        </div>
+            
+            
+        </div>		</div>
+    </footer>
+
     <script src="/static/js/main.js"></script>
 </body>
 </html>
