add: article page
Article page scrapes from the site title,
summary and content of article and displays
them in a single page.

--- a/templates/base.html
+++ b/templates/base.html
@@ -46,7 +46,7 @@
             
             
             
-            <a href="https://futureoflife.org/" target="_blank"><span class="et_pb_image_wrap "><img loading="lazy" decoding="async" width="158" height="132" src="https://artificialintelligenceact.eu/wp-content/uploads/2021/08/FLI-.webp" alt="" title="FLI" class="wp-image-1554"></span></a>
+            <span class="et_pb_image_wrap "><img loading="lazy" decoding="async" height="132" src="../static/img/loghi_footer.jpeg" alt="" title="logos" class="wp-image-1554"></span>
         </div>
         </div><div class="et_pb_column et_pb_column_3_4 et_pb_column_4_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
             
@@ -58,13 +58,8 @@
             
             
             
-            <div class="et_pb_text_inner">© Future of Life Institute, 2024</div>
+            <div class="et_pb_text_inner">Hic Sunt Leones team, 2024</div>
         </div><div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
-            
-            
-            
-            
-            <div class="et_pb_text_inner"><p><span>This website is maintained by the Future of Life Institute (FLI). Our <a href="https://transparency-register.europa.eu/searchregister-or-update/organisation-detail_en?id=787064543128-10" target="_blank" rel="noopener">EU transparency register</a> number is&nbsp;</span>787064543128-10.</p></div>
         </div>
         </div>
             
