rm: search form in ai_act.html

--- a/templates/ai_act.html
+++ b/templates/ai_act.html
@@ -40,7 +40,8 @@
         <div class="et_pb_text_inner"><p>This page helps you navigate the EU Artificial Intelligence Act.</p></div>
 <p>The Act is divided into 12 chapters, each containing a number of articles, and contains 13 annexes. You can consult the Act by article, open the annexes or use the search function to find specific information.</p></div>
     </div>
-    </div><div class="et_pb_column et_pb_column_1_4 et_pb_column_2 et_pb_css_mix_blend_mode_passthrough et-last-child et_had_animation" style="">
+    </div>
+        <!-- <div class="et_pb_column et_pb_column_1_4 et_pb_column_2 et_pb_css_mix_blend_mode_passthrough et-last-child et_had_animation" style="">
         
         
         <div class="et_pb_with_border et_pb_module et_pb_text et_pb_text_3 et_clickable et_pb_section_video_on_hover  et_pb_text_align_left et_pb_bg_layout_light">
@@ -75,7 +76,7 @@
         
         
         
-    </div><div class="et_pb_with_border et_pb_row et_pb_row_1 et_pb_gutters2">
+    </div><div class="et_pb_with_border et_pb_row et_pb_row_1 et_pb_gutters2"> -->
         <div class="et_pb_column et_pb_column_1_3 et_pb_column_3  et_pb_css_mix_blend_mode_passthrough">
         
         
