add: form.js and questions

--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -4,11 +4,14 @@
 <h1>AI Evaluator</h1>
 <p>Please enter the AI system information to evaluate it based on the AI Act.</p>
 <div class="ai_evaluator_form">
-    <h3>Find out which articles relate to your AI system</h3>
+    <h2>Find out which articles relate to your AI system</h2>
     <form>
         
     </form>
-    <div id="ai_evaluator_results"></div>
+    <div id="ai_evaluator_results">
+        <h2>Output</h2>
+
+    </div>
 </div>
 
 <script src="../static/js/form.js"></script>
