--- a/templates/article_annex.html
+++ b/templates/article_annex.html
@@ -10,4 +10,28 @@
         {% endfor %}
     </div>
     {{ content | safe }}
+
+<style>
+    .content {
+        margin: 2rem 4rem;
+        text-align: justify;
+    }
+    .article_annex {
+        margin: 0 auto;
+        max-width: 800px;
+        padding: 20px;
+    }
+
+    .summary {
+        margin-top: 20px;
+        border-top: 1px solid #ccc;
+        padding-top: 20px;
+    }
+
+    .et_pb_post_content_0_tb_body {
+        margin-top: 20px;
+        border-top: 1px solid #ccc;
+        padding-top: 20px;
+    }
+</style>
 {% endblock %}
