--- a/templates/base.html
+++ b/templates/base.html
@@ -5,12 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>AI Compass</title>
     <link rel="stylesheet" href="/static/css/styles.css">
+    <link rel="icon" type="image/x-icon" href="/static/img/favicon.ico">
 </head>
 <body>
     <!-- Navbar -->
     <nav class="navbar">
         <div class="logo">
-            <img src="/static/img/logo.png" alt="AI Compass Logo">
+            <img src="/static/img/icon.jpeg" alt="AI Compass Logo">
             <span>AI Compass</span>
         </div>
         <ul class="nav-links">
@@ -36,7 +37,7 @@
             
             
             <div class="et_pb_row et_pb_row_1_tb_footer et_pb_gutters1 et_pb_row_1-4_3-4">
-            <div class="et_pb_column et_pb_column_1_4 et_pb_column_3_tb_footer  et_pb_css_mix_blend_mode_passthrough">
+            <div class="et_pb_column et_pb_column_1_4 et_pb_column_3_tb_footer  ">
             
             
             
@@ -46,9 +47,9 @@
             
             
             
-            <span class="et_pb_image_wrap "><img loading="lazy" decoding="async" height="132" src="../static/img/loghi_footer.jpeg" alt="" title="logos" class="wp-image-1554"></span>
+            <span class="et_pb_image_wrap "><img loading="lazy" decoding="async" height="132" src="/static/img/loghi_footer.jpeg" alt="" title="logos" class="wp-image-1554"></span>
         </div>
-        </div><div class="et_pb_column et_pb_column_3_4 et_pb_column_4_tb_footer  et_pb_css_mix_blend_mode_passthrough et-last-child">
+        </div><div class="et_pb_column et_pb_column_3_4 et_pb_column_4_tb_footer   et-last-child">
             
             
             
@@ -58,7 +59,10 @@
             
             
             
-            <div class="et_pb_text_inner">Hic Sunt Leones team, 2024</div>
+            <div class="et_pb_text_inner">
+                Hic Sunt Leones team, 2024 <br>
+                Credits: <a href="https://artificialintelligenceact.eu/">Future of Life Institute</a>
+            </div>
         </div><div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
         </div>
         </div>
