add: templates/home.html

--- a/templates/home.html
+++ b/templates/home.html
@@ -3,4 +3,28 @@
 {% block content %}
 <h1>Welcome to AI Compass</h1>
 <p>This is the home page where you can learn more about the AI Act and evaluate AI systems based on the Act.</p>
+<p>The "AI Compass" is your smart guide through the EU's AI Act. With some tailored questions, it cuts through the legal fog to clarify your obligations. Easy to use and packed with helpful resources, including a collaborative Wiki, it’s designed for developers who want clear answers fast. More features are on the way to keep you ahead of the curve.</p>
+<p>Browse the <a href="http://aicompass.barchero.it/ai-act">articles of the AI Act</a> and <a href="http://aicompass.barchero.it/ai-evaluator">check which regulations</a> your AI system is subject to.</p>
+<style>
+    .content {
+        margin: 2rem 4rem;
+        text-align: justify;
+    }
+
+    a {
+        text-decoration: none;
+        color: #303A99;
+    }
+
+    a:hover {
+        color: #3b7bce;
+    }
+
+    footer {
+        /* position it at end of window */
+        position: fixed;
+        bottom: 0;
+    }
+
+</style>
 {% endblock %}
