edit: graph and articles in form

--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -40,8 +40,13 @@
     }
 
     .text_form label {
-        text-decoration: underline;
+        font-weight: bold;
         margin: 0.5rem 0;
+        text-decoration: underline;
+    }
+
+    .text_form label a {
+        text-decoration: none;
     }
 
     .text_form p {
