--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -3,28 +3,53 @@
 {% block content %}
 <h1>AI Evaluator</h1>
 <p>Please enter the AI system information to evaluate it based on the AI Act.</p>
-<div class="ai_evaluator_form">
-    <h2>Find out which articles relate to your AI system</h2>
-    <form>
-        
-    </form>
-    <div id="ai_evaluator_results">
-        <h2>Output</h2>
-
+<div class="evaluator">
+    <div class="ai_evaluator_form box">
+        <h2>Find out which articles relate to your AI system</h2>
+        <form>
+            
+        </form>
+        <div id="ai_evaluator_results">
+            <h2>Output</h2>
+    
+        </div>
+    </div>
+    <div class="helps">
+        <div class="summary box">
+            <h3>Helpdesk</h3>
+            <h4>Summary of the article</h4>
+            <p id="summary"></p>
+        </div>
+        <div class="definitions box">
+            <h3>Helpdesk</h3>
+            <h4>Definitions</h4>
+            <p id="definitions"></p>
+        </div>
     </div>
 </div>
+
 
 <style>
     .content {
         margin: 2rem 4rem;
+        width: 100%;
     }
 
-    .ai_evaluator_form {
-        margin: 0 auto;
-        max-width: 800px;
+    .box {
         padding: 20px;
         border: 1px solid #ccc;
         border-radius: 6px;
+    }
+
+    .evaluator {
+        margin: 0 auto;
+        display: flex;
+        width: 80%;
+    }
+
+    .ai_evaluator_form {
+        margin: 0 5% 0 auto;
+        width: 70%;
         background-color: #3b7bce7e;
     }
 
@@ -79,6 +104,18 @@
         margin-top: 20px;
         border-top: 1px solid #ccc;
         padding-top: 20px;
+    }
+
+    .helps {
+        display: flex;
+        flex-direction: column;
+        width: 30%;
+    }
+
+    .summary, .definitions {
+        background-color: #3b7bce3f;
+        padding: 10px;
+        margin-bottom: 20px;
     }
 </style>
 
