add: text of summaries and defs

--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -18,12 +18,10 @@
         <div class="summary box">
             <h3>Helpdesk</h3>
             <h4>Summary of the article</h4>
-            <p id="summary"></p>
         </div>
         <div class="definitions box">
             <h3>Helpdesk</h3>
             <h4>Definitions</h4>
-            <p id="definitions"></p>
         </div>
     </div>
 </div>
@@ -116,6 +114,21 @@
         background-color: #3b7bce3f;
         padding: 10px;
         margin-bottom: 20px;
+    }
+
+    .helps h3 {
+        font-size: medium;
+        margin: 0.5rem;
+    }
+
+    .helps h4 {
+        font-size: small;
+        margin: 0.5rem;
+    }
+
+    .helps {
+        font-size: small;
+        text-align: justify;
     }
 </style>
 
