add: definitions with scraping

--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -49,6 +49,7 @@
         width: 70%;
         background-color: #3b7bce7e;
         padding: 20px;
+        height: fit-content;
     }
 
     .ai_evaluator_form label {
