edit: separate boxes form output

--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -4,12 +4,14 @@
 <h1>AI Evaluator</h1>
 <p>Please enter the AI system information to evaluate it based on the AI Act.</p>
 <div class="evaluator">
-    <div class="ai_evaluator_form box">
-        <h2>Find out which articles relate to your AI system</h2>
-        <form>
-            
-        </form>
-        <div id="ai_evaluator_results">
+    <div class="ai_evaluator_form">
+        <div class="questions box">
+            <h2>Find out which articles relate to your AI system</h2>
+            <form>
+                
+            </form>
+        </div>
+        <div id="ai_evaluator_results" class="box">
             <h2>Output</h2>
     
         </div>
@@ -36,6 +38,8 @@
     .box {
         border: 1px solid #ccc;
         border-radius: 6px;
+        background-color: #3b7bce7e;
+        padding: 20px;
     }
 
     .evaluator {
@@ -47,8 +51,6 @@
     .ai_evaluator_form {
         margin: 0 5% 0 auto;
         width: 70%;
-        background-color: #3b7bce7e;
-        padding: 20px;
         height: fit-content;
     }
 
