add: community e sources

--- a/templates/base.html
+++ b/templates/base.html
@@ -18,6 +18,8 @@
             <li><a href="/">Home</a></li>
             <li><a href="/ai-act">AI Act</a></li>
             <li><a href="/ai-evaluator">AI Evaluator</a></li>
+            <li><a href="/community">Community</a></li>
+            <li><a href="/sources">Sources</a></li>
         </ul>
     </nav>
 
