add: forum non chatbox

--- a/templates/community.html
+++ b/templates/community.html
@@ -20,6 +20,14 @@
                 <label><i>Prof. Albert AInstein - legal consultant</i></label>
                 <p>Yes, sure! What do you need?</p>
             </div>
+            <div class="chat-message answer">
+                <label><i>Dott. House - Doctor</i></label>
+                <p>If you need a scientific help i can assist you</p>
+            </div>
+            <div class="chat-message question">
+                <label><i>Laura</i></label>
+                <p>Thanks, i wuold like to create a healthcare start-up. Where can i start?</p>
+            </div>
         </div>
         <form>
             <input type="text" id="chat-input" placeholder="Type your message here">
@@ -36,6 +44,14 @@
             <div class="forum-message answer">
                 <label><i>L. Da Vinci - start-upper</i></label>
                 <p>I am also a start-upper. I can help you!</p>
+            </div>
+            <div class="forum-message answer">
+                <label><i>M. Polo - discoverer</i></label>
+                <p>Try to read on Wikipedia</p>
+            </div>
+            <div class="forum-message answer">
+                <label><i>Donatello - artist</i></label>
+                <p>Wikipedia is not good, it fooled me.</p>
             </div>
         </div>
         <form>
@@ -71,6 +87,7 @@
         padding: 20px;
         height: 300px;
         overflow-y: scroll;
+        margin-right: 2rem;
     }
 
     .chat-message, .forum-message {
