--- a/templates/ai_evaluator.html
+++ b/templates/ai_evaluator.html
@@ -133,6 +133,22 @@
         font-size: small;
         text-align: justify;
     }
+
+    .summary p {
+        margin: auto 0.5rem;
+    }
+
+    .summary ul {
+        margin: auto 0.5rem;
+    }
+
+    .definitions p {
+        margin: auto 0.5rem;
+    }
+
+    .definitions ul {
+        margin: auto 0.5rem;
+    }
 </style>
 
 <script src="/static/js/form.js"></script>
