--- a/templates/base.html
+++ b/templates/base.html
@@ -62,8 +62,7 @@
             
             
             <div class="et_pb_text_inner">
-                Hic Sunt Leones team, 2024 <br>
-                Credits: <a href="https://artificialintelligenceact.eu/">Future of Life Institute</a>
+                Hic Sunt Leones team, 2024
             </div>
         </div><div class="et_pb_module et_pb_text et_pb_text_3_tb_footer  et_pb_text_align_left et_pb_bg_layout_light">
         </div>
